docs(*): 添加 http 相关文档

--- a/4. HTTP 访问控制（CORS）.md
+++ b/4. HTTP 访问控制（CORS）.md
@@ -2,7 +2,15 @@
 
 跨源资源共享（CORS，或通俗地译为跨域资源共享）是一种基于 HTTP 头的机制，该机制通过允许服务器标示除了它自己以外的其他源（域、协议或端口），使得浏览器允许这些源访问加载自己的资源。
 
-规范要求，对那些可能对服务器数据产生副作用的 HTTP 请求方法（特别是 GET 以外的 HTTP 请求，或者搭配某些 MIME 类型的 POST 请求），浏览器必须首先使用 `OPTIONS` 方法发起一个预检请求（preflight request），从而获知服务端是否允许该跨源请求。服务器确认允许之后，才发起实际的 HTTP 请求。在预检请求的返回中，服务器端也可以通知客户端，是否需要携带身份凭证（例如 Cookie 和 HTTP 认证相关数据）。
+预检请求：
+
+- 预检请求只会在某些跨域请求中发生；
+- PUT、DELETE、PATCH请求，和搭配某些 MIME 类型的 POST 请求；
+- 预检请求是 OPTIONS 方法。
+- 预检请求响应 `200 OK`，或 `204 No Content` 状态码。
+- 预检请求的返回中，服务器端也可以通知客户端，是否需要携带身份凭证（例如 Cookie 和 HTTP 认证相关数据）。
+- 预检请求后，服务器允许的情况下，才会发起实际的 HTTP 请求。
+
 
 若满足所有下列条件，则该请求视为简单请求：
 
@@ -48,4 +56,3 @@
 - `Access-Control-Max-Age`：本次预检请求的有效期，单位为秒。有效期间，不用发出另一条预检请求。
 
 `Access-Control-Allow-Credentials` 头指定了当浏览器的 `credentials` 设置为 `true` 时是否允许浏览器读取 `response` 的内容。
-
