--- a/7. HTTP 压缩.md
+++ b/7. HTTP 压缩.md
@@ -19,6 +19,6 @@
 
 ## 2. 端到端的数据压缩
 
-为了选择要采用的压缩算法，浏览器和服务器之间会使用主动协商机制。浏览器发送 `Accept-Encoding` 标头，其中包含有它所支持的压缩算法，以及各自的优先级，服务器则从中选择一种，使用该算法对响应的消息主体进行压缩，并且发送 `Content-Encoding` 标头来告知浏览器它选择了哪一种算法。
+**为了选择要采用的压缩算法，浏览器和服务器之间会使用主动协商机制。** 浏览器发送 `Accept-Encoding` 标头，其中包含有它所支持的压缩算法，以及各自的优先级，服务器则从中选择一种，使用该算法对**响应的消息主体进行压缩**，并且发送 `Content-Encoding` 标头来告知浏览器它选择了哪一种算法。
 
 ![HTTP 压缩](./images/httpcompression1.png)
