--- a/1. 资源和 URI.md
+++ b/1. 资源和 URI.md
@@ -25,11 +25,15 @@
 | view-source | 资源的源代码                                |
 | ws/wss      | WebSocket 连接/加密的 WebSocket 连接        |
 
+`location.protocol` 没有双斜线（`//`），比如：`https:`。
+
 （2）主机
 
 ![主机](./images/url-domain.png)
 
 `www.example.com` 既是一个域名，也代表管理该域名的机构。它指示了需要向网络上的哪一台主机发起请求。
+
+`location.hostname`，不包含端口，也没有 `:`。
 
 （3）端口
 
@@ -37,17 +41,23 @@
 
 如果访问的该 Web 服务器使用 HTTP 协议的标准端口（HTTP 为 80，HTTPS 为 443）授予对其资源的访问权限，则通常省略此部分。否则端口就是 URI 必须的部分。
 
+`location.port`。
+
 （4）路径
 
 ![路径](./images/url-path.png)
 
 `/path/to/myfile.html` 是 Web 服务器上资源的路径。
 
+`location.pathname`，开头包含一个 `/`。
+
 （5）查询
 
 ![查询](./images/url-parameters.png)
 
 `?key1=value1&key2=value2` 是提供给 Web 服务器的额外参数。这些参数是用 `&` 符号分隔的键/值对列表。
+
+`location.search`，开头有一个 `?`。
 
 （6）片段
 
