--- a/2. HTTP 指南.md
+++ b/2. HTTP 指南.md
@@ -64,6 +64,6 @@ HTTP 请求是由客户端发出的消息，用来使服务器执行动作。
 
 作为 HTTP/1.x 的连接，请求是序列化的，并发连接数是 6 条。如果尝试大于这个数字，就有触发服务器 DoS 保护的风险。
 
-不要在同一个域名下获取所有资源，假设有个域名是 `www.example.com`，我们可以把它拆分成好几个域名：`www1.example.com`、`www2.example.com`、`www3.example.com`。所有这些域名都指向同一台服务器，浏览器会同时为每个域名建立 6 条连接（在我们这个例子中，连接数会达到 18 条）。这一技术被称作域名分片。
+不要在同一个域名下获取所有资源，假设有个域名是 `www.example.com`，我们可以把它拆分成好几个域名：`www1.example.com`、`www2.example.com`、`www3.example.com`。所有这些域名都指向同一台服务器，浏览器会同时为每个域名建立 6 条连接（在我们这个例子中，连接数会达到 18 条）。这一技术被称作 **域名分片**。
 
 ![域名分片](./images/httpsharding.png)
